# uSignal

./: CMakeLists.txt  conanfile.py
.github/actions/get-oneapi/: action.yml
.github/actions/prepare-environment/: action.yml
.github/workflows/: build.yml  cmake-x86-ubuntu.yml
cmake/: uSignalConfig.cmake.in
include/uSignal/: demean.hpp  detrend.hpp  taper.hpp  vector.hpp  waterLevelTrigger.hpp  window.hpp
include/uSignal/filterDesign/: response.hpp
include/uSignal/filterDesign/finiteImpulseResponse/: hilbertTransformer.hpp  windowBased.hpp
include/uSignal/filterDesign/infiniteImpulseResponse/: analogPrototype.hpp  bilinearTransform.hpp  convertBand.hpp  digital.hpp
include/uSignal/filterImplementations/: finiteImpulseResponse.hpp  infiniteImpulseResponse.hpp  secondOrderSections.hpp  transposeDirectForm2.hpp
include/uSignal/filterRepresentations/: finiteImpulseResponse.hpp  infiniteImpulseResponse.hpp  secondOrderSections.hpp  zerosPolesGain.hpp
include/uSignal/system/: system.hpp
include/uSignal/transforms/fourier/: forward.hpp
include/uSignal/transforms/hilbert/: finiteImpulseResponse.hpp
include/uSignal/utilities/interpolation/: weightedAverageSlopes.hpp
src/: alignment.hpp  demean.cpp  detrend.cpp  system.cpp  taper.cpp  vector.cpp  waterLevelTrigger.cpp  window.cpp
src/filterDesign/: response.cpp  windowFunctions.hpp
src/filterDesign/finiteImpulseResponse/: hilbertTransformer.cpp  windowBased.cpp
src/filterDesign/infiniteImpulseResponse/: analogPrototype.cpp  bilinearTransform.cpp  convertBand.cpp  digital.cpp
src/filterImplementations/: finiteImpulseResponse.cpp  infiniteImpulseResponse.cpp  secondOrderSections.cpp  transposeDirectForm2.cpp
src/filterRepresentations/: finiteImpulseResponse.cpp  infiniteImpulseResponse.cpp  secondOrderSections.cpp  zerosPolesGain.cpp  zpk2sos.hpp
src/private/: version.hpp.in
src/transforms/fourier/: forward.cpp
src/transforms/hilbert/: finiteImpulseResponse.cpp
src/utilities/: version.cpp
src/utilities/interpolation/: weightedAverageSlopes.cpp
src/utilities/math/: polynomial.cpp  polynomial.hpp
testing/data/: fir.py  firReference.gse2.txt  iir.py  sos.py  sosReference.gse2.txt  transposeDF2.gse2.txt
testing/filterDesign/: finiteImpulseResponse.cpp  infiniteImpulseResponse.cpp  response.cpp
testing/filterImplementations/: finiteImpulseResponse.cpp  infiniteImpulseResponse.cpp  infinityNorm.hpp  loadSignal.hpp
testing/filterRepresentations/: finiteImpulseResponse.cpp  infiniteImpulseResponse.cpp  secondOrderSections.cpp  zerosPolesGain.cpp
testing/transforms/: fourier.cpp  hilbert.cpp
testing/utilities/: demean.cpp  math.cpp  taper.cpp  waterLevelTrigger.cpp  window.cpp
